[package]
edition = "2021"
name = "redis-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "redis-rs"
path = "src/main.rs"

[dependencies]
env_logger = {version = "0.10", features = ["default"]}
log = {version = "0.4", features = ["std", "serde"]}
mio = {version = "0.8", features = ["os-poll", "net"]}
skiplist = {version = "0.5.1"}

[dependencies.marco]
path="./marco"

[dependencies.trie]
path="./trie"
