[package]
edition = "2021"
name = "redis-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "redis-rs"
path = "src/main.rs"

[dependencies]
bloomfilter = {version = "1.0.12"}
bytes = {version = "1.0", features = ["serde"]}
clap = {version = "4.4.6", features = ["derive"]}
env_logger = {version = "0.10", features = ["default"]}
log = {version = "0.4", features = ["std", "serde"]}
mio = {version = "0.8", features = ["os-poll", "net"]}
skiplist = {version = "0.5.1"}
tokio = {version = "1", features = ["full"]}
trace = {version = "0.1.7"}

[dev-dependencies]
lazy_static = {version = "1.4"}

[dependencies.marco]
path = "./marco"

[dependencies.trie]
path = "./trie"

[dependencies.thread_pool]
path = "./thread_pool"

# [dependencies.bloomfilter]
# path = "./bloomfilter"
